welcome.lessons.welcome.array.island.Island.scala.error
island:8: error: not found: value then
		if (i != 0) then {
                            ^